Được tạo bằng Colaboratory

--- a/oop2_30_11.ipynb
+++ b/oop2_30_11.ipynb
@@ -99,6 +99,79 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6jfLNE12BER8",
+        "outputId": "7eae053d-7f02-4e85-fbd5-36398f4e3e42",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "class Person:\n",
+        "  name:str\n",
+        "  gender:str\n",
+        "  phone:str\n",
+        "\n",
+        "  def __init__(self, ten, gioitinh, sdt) -> None:\n",
+        "        super().__init__()\n",
+        "        self.name= ten\n",
+        "        self.gender = gioitinh\n",
+        "        self.phone = sdt\n",
+        "\n",
+        "  def outputPerson(self) -> str:\n",
+        "        result = \"Tên: \" + str(self.name) + \".Giới tính: \" + str(self.gender) + \".Số điện thoại: \" + str(self.phone) \n",
+        "        return result\n",
+        "\n",
+        "class Student(Person):\n",
+        "  studentID:int\n",
+        "  clas:str\n",
+        "\n",
+        "  def __init__(self, ten, gioitinh, sdt,MaSV,lop) -> None:\n",
+        "      Person.__init__(self, ten, gioitinh, sdt)\n",
+        "      self.studentID = MaSV\n",
+        "      self.clas= lop\n",
+        "\n",
+        "  def outputStudent(self) -> str:\n",
+        "      result = self.outputPerson() + \".Mã số sinh viên: \" + str(self.studentID) + \".Lớp: \" +self.clas\n",
+        "      return result\n",
+        "\n",
+        "class Lecturer(Person):\n",
+        "  lecturerID:int\n",
+        "  yearsOfExperience:int\n",
+        "\n",
+        "  def __init__(self, ten, gioitinh, sdt, MaGV,namkinhnghiem) -> None:\n",
+        "        Person.__init__(self, ten, gioitinh, sdt)\n",
+        "        self.lecturerID = MaGV\n",
+        "        self.yearsOfExperience = namkinhnghiem\n",
+        "\n",
+        "  def outputLecturer(self) -> str:\n",
+        "        result = self.outputPerson() + \".Mã giảng viên: \" + str(self.lecturerID) + \".Số năm kinh nghiệm \" + str(self.yearsOfExperience)\n",
+        "        return result\n",
+        "    \n",
+        "def main():\n",
+        "  banA = Student( \" Nguyen Van A\", 1, \"09222222222\", 10,\"AI&DS\" )\n",
+        "  gv = Lecturer( \" thay A\", 1, \"0988833333\", 232333332, \"20 nam\")  \n",
+        "  print(banA.outputStudent())\n",
+        "  print(gv.outputLecturer())\n",
+        "   \n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "  main()"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tên:  Nguyen Van A.Giới tính: 1.Số điện thoại: 09222222222.Mã số sinh viên: 10.Lớp: AI&DS\n",
+            "Tên:  thay A.Giới tính: 1.Số điện thoại: 0988833333.Mã giảng viên: 232333332.Số năm kinh nghiệm 20 nam\n"
+          ]
+        }
+      ]
     }
   ]
 }
