Được tạo bằng Colaboratory

--- a/Baitaplaptrinh_taptinnangcao.ipynb
+++ b/Baitaplaptrinh_taptinnangcao.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Baitaplaptrinh_taptinnangcao.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN3v2lSEghZ34xowBxHGCkN",
+      "authorship_tag": "ABX9TyPslW+qyyHu65jJnirLLq3R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,9 +32,10 @@
       "metadata": {
         "id": "77E6PUDHJXpJ",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
         },
-        "outputId": "4110156e-c600-43c8-ad43-553e7512b7c3"
+        "outputId": "5696411b-afd1-4bc5-c3f6-0582448af132"
       },
       "source": [
         "class Person:\n",
@@ -82,41 +83,44 @@
         "    bach=Person(input(\"Mời nhập tên người \"+str(i+1)+\":\"),input(\"Mời nhập số điện thoại người \"+str(i+1)+\":\"),input(\"Mời nhập email người \"+str(i+1)+\":\"))\n",
         "    lst.append(bach.outputPerson())\n",
         "    lstname.append(bach.name)\n",
-        "    lst\n",
+        "    lst                                           #Danh sách 10 cá nhân\n",
         "    i+=1\n",
         "  print(\"Danh sách 10 cá nhân:\",lst)\n",
         "  print(\"\\n\")\n",
+        "\n",
         "  while j<3:\n",
         "    bach1=Student(input(\"Mời nhập tên sinh viên \"+str(j+1)+\":\"),input(\"Mời nhập số điện thoại sinh viên \"+str(j+1)+\":\"),input(\"Mời nhập email sinh viên \"+str(j+1)+\":\"),input(\"Mời nhập số sinh viên \"+str(j+1)+\":\"),input(\"Mời nhập điểm trung bình sinh viên \"+str(j+1)+\":\"))\n",
         "    lst1.append(bach1.outputStudent())\n",
-        "    lst1avarage.append(bach1.avaragemark)\n",
+        "    lst1avarage.append(bach1.avaragemark)               #Danh sách 10 sinh viên\n",
         "    j+=1\n",
         "  print(\"Danh sách 10 sinh viên:\",lst1)\n",
         "  print(\"\\n\")\n",
+        "\n",
         "  while k<3:\n",
         "    bach3=Professor(input(\"Mời nhập tên giáo sư \"+str(k+1)+\":\"),input(\"Mời nhập số điện thoại giáo sư \"+str(k+1)+\":\"),input(\"Mời nhập email giáo sư \"+str(k+1)+\":\"),input(\"Mời nhập lương giáo sư(triệu đồng) \"+str(k+1)+\":\"))\n",
         "    lst2.append(bach3.outputProfessor())\n",
-        "    lst2salary.append(bach3.salary)\n",
-        "    k+=1\n",
+        "    salary1=int(bach3.salary)\n",
+        "    lst2salary.append(salary1)\n",
+        "    k+=1                                          #Danh sách 10 giáo sư\n",
         "  print(\"Danh sách 10 giáo sư:\",lst2)\n",
         "\n",
-        "  lstname=sorted(lstname)\n",
-        "  lst1avarage=sorted(lst1avarage)\n",
+        "  lstname=sorted(lstname,reverse=True)\n",
+        "  lst1avarage=sorted(lst1avarage,reverse=True)\n",
         "  lst2salary=sorted(lst2salary)\n",
         "  lst_result=[]\n",
-        "  lst1_result=[]\n",
+        "  lst1_result=[]                              #Sắp xếp\n",
         "  lst2_result=[]\n",
         "  for x in range(len(lstname)):\n",
         "    for y in lst:\n",
         "      if lstname[x] in y:\n",
         "        lst_result.append(y)\n",
-        "  print(\"\\nDanh sách 10 cá nhân sau khi được sắp xếp tăng dần theo tên là:\",lst_result)\n",
-        "  \n",
+        "  print(\"\\nDanh sách 10 cá nhân sau khi được sắp xếp giảm dần theo tên là:\",lst_result)\n",
+        "\n",
         "  for m in range(len(lst1avarage)):\n",
         "    for n in lst1:\n",
         "      if lst1avarage[m] in n:\n",
         "        lst1_result.append(n)\n",
-        "  print(\"Danh sách 10 sinh viên sau khi sắp xếp tăng dần theo điểm trung bình là:\",lst1_result)\n",
+        "  print(\"Danh sách 10 sinh viên sau khi sắp xếp giảm dần theo điểm trung bình là:\",lst1_result)\n",
         "\n",
         "  for c in range(len(lst2salary)):\n",
         "    for d in lst2:\n",
@@ -128,7 +132,7 @@
         "  main()\n",
         "\n"
       ],
-      "execution_count": 26,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,13 +141,13 @@
             "Mời nhập tên người 1:duy\n",
             "Mời nhập số điện thoại người 1:1\n",
             "Mời nhập email người 1:1\n",
-            "Mời nhập tên người 2:bach\n",
+            "Mời nhập tên người 2:an\n",
             "Mời nhập số điện thoại người 2:2\n",
             "Mời nhập email người 2:2\n",
-            "Mời nhập tên người 3:an\n",
+            "Mời nhập tên người 3:bach\n",
             "Mời nhập số điện thoại người 3:3\n",
             "Mời nhập email người 3:3\n",
-            "Danh sách 10 cá nhân: ['Tên:duy.Số điện thoại:1.Email:1', 'Tên:bach.Số điện thoại:2.Email:2', 'Tên:an.Số điện thoại:3.Email:3']\n",
+            "Danh sách 10 cá nhân: ['Tên:duy.Số điện thoại:1.Email:1', 'Tên:an.Số điện thoại:2.Email:2', 'Tên:bach.Số điện thoại:3.Email:3']\n",
             "\n",
             "\n",
             "Mời nhập tên sinh viên 1:a\n",
@@ -155,32 +159,43 @@
             "Mời nhập số điện thoại sinh viên 2:b\n",
             "Mời nhập email sinh viên 2:b\n",
             "Mời nhập số sinh viên 2:b\n",
-            "Mời nhập điểm trung bình sinh viên 2:4.5\n",
+            "Mời nhập điểm trung bình sinh viên 2:6\n",
             "Mời nhập tên sinh viên 3:c\n",
             "Mời nhập số điện thoại sinh viên 3:c\n",
             "Mời nhập email sinh viên 3:c\n",
             "Mời nhập số sinh viên 3:c\n",
             "Mời nhập điểm trung bình sinh viên 3:8\n",
-            "Danh sách 10 sinh viên: ['Tên:a.Số điện thoại:a.Email:a.Số sinh viên:a.Điểm trung bình:5.5', 'Tên:b.Số điện thoại:b.Email:b.Số sinh viên:b.Điểm trung bình:4.5', 'Tên:c.Số điện thoại:c.Email:c.Số sinh viên:c.Điểm trung bình:8']\n",
+            "Danh sách 10 sinh viên: ['Tên:a.Số điện thoại:a.Email:a.Số sinh viên:a.Điểm trung bình:5.5', 'Tên:b.Số điện thoại:b.Email:b.Số sinh viên:b.Điểm trung bình:6', 'Tên:c.Số điện thoại:c.Email:c.Số sinh viên:c.Điểm trung bình:8']\n",
             "\n",
             "\n",
             "Mời nhập tên giáo sư 1:q\n",
             "Mời nhập số điện thoại giáo sư 1:q\n",
             "Mời nhập email giáo sư 1:q\n",
-            "Mời nhập lương giáo sư(triệu đồng) 1:3\n",
-            "Mời nhập tên giáo sư 2:e\n",
-            "Mời nhập số điện thoại giáo sư 2:e\n",
-            "Mời nhập email giáo sư 2:e\n",
-            "Mời nhập lương giáo sư(triệu đồng) 2:10\n",
-            "Mời nhập tên giáo sư 3:b\n",
-            "Mời nhập số điện thoại giáo sư 3:b\n",
-            "Mời nhập email giáo sư 3:b\n",
-            "Mời nhập lương giáo sư(triệu đồng) 3:5\n",
-            "Danh sách 10 giáo sư: ['Tên:q.Số điện thoại:q.Email:q.Lương(triệu đồng):3', 'Tên:e.Số điện thoại:e.Email:e.Lương(triệu đồng):10', 'Tên:b.Số điện thoại:b.Email:b.Lương(triệu đồng):5']\n",
+            "Mời nhập lương giáo sư(triệu đồng) 1:5\n",
+            "Mời nhập tên giáo sư 2:t\n",
+            "Mời nhập số điện thoại giáo sư 2:t\n",
+            "Mời nhập email giáo sư 2:t\n",
+            "Mời nhập lương giáo sư(triệu đồng) 2:2\n",
+            "Mời nhập tên giáo sư 3:u\n",
+            "Mời nhập số điện thoại giáo sư 3:u\n",
+            "Mời nhập email giáo sư 3:u\n",
+            "Mời nhập lương giáo sư(triệu đồng) 3:10\n",
+            "Danh sách 10 giáo sư: ['Tên:q.Số điện thoại:q.Email:q.Lương(triệu đồng):5', 'Tên:t.Số điện thoại:t.Email:t.Lương(triệu đồng):2', 'Tên:u.Số điện thoại:u.Email:u.Lương(triệu đồng):10']\n",
             "\n",
-            "Danh sách 10 cá nhân sau khi được sắp xếp tăng dần theo tên là: ['Tên:an.Số điện thoại:3.Email:3', 'Tên:bach.Số điện thoại:2.Email:2', 'Tên:duy.Số điện thoại:1.Email:1']\n",
-            "Danh sách 10 sinh viên sau khi sắp xếp tăng dần theo điểm trung bình là: ['Tên:b.Số điện thoại:b.Email:b.Số sinh viên:b.Điểm trung bình:4.5', 'Tên:a.Số điện thoại:a.Email:a.Số sinh viên:a.Điểm trung bình:5.5', 'Tên:c.Số điện thoại:c.Email:c.Số sinh viên:c.Điểm trung bình:8']\n",
-            "Danh sách 10 giáo sư sau khi sắp xếp tăng dần theo lương là: ['Tên:e.Số điện thoại:e.Email:e.Lương(triệu đồng):10', 'Tên:q.Số điện thoại:q.Email:q.Lương(triệu đồng):3', 'Tên:b.Số điện thoại:b.Email:b.Lương(triệu đồng):5']\n"
+            "Danh sách 10 cá nhân sau khi được sắp xếp giảm dần theo tên là: ['Tên:duy.Số điện thoại:1.Email:1', 'Tên:bach.Số điện thoại:3.Email:3', 'Tên:an.Số điện thoại:2.Email:2']\n",
+            "Danh sách 10 sinh viên sau khi sắp xếp giảm dần theo điểm trung bình là: ['Tên:c.Số điện thoại:c.Email:c.Số sinh viên:c.Điểm trung bình:8', 'Tên:b.Số điện thoại:b.Email:b.Số sinh viên:b.Điểm trung bình:6', 'Tên:a.Số điện thoại:a.Email:a.Số sinh viên:a.Điểm trung bình:5.5']\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-28-dc61c6541b92>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     90\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 92\u001b[0;31m   \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     93\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-28-dc61c6541b92>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     85\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlst2salary\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     86\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0md\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlst2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 87\u001b[0;31m       \u001b[0;32mif\u001b[0m \u001b[0mlst2salary\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32min\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     88\u001b[0m         \u001b[0mlst2_result\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Danh sách 10 giáo sư sau khi sắp xếp tăng dần theo lương là:\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlst2_result\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'in <string>' requires string as left operand, not int"
           ]
         }
       ]
