Được tạo bằng Colaboratory

--- a/Baitaplaptrinh_taptinnangcao.ipynb
+++ b/Baitaplaptrinh_taptinnangcao.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Baitaplaptrinh_taptinnangcao.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPslW+qyyHu65jJnirLLq3R",
+      "authorship_tag": "ABX9TyO8ZdMAJk3lSE00iBxLhTpw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,9 +33,9 @@
         "id": "77E6PUDHJXpJ",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 427
         },
-        "outputId": "5696411b-afd1-4bc5-c3f6-0582448af132"
+        "outputId": "008bdd16-76f1-4f28-ab59-da5bc511c6be"
       },
       "source": [
         "class Person:\n",
@@ -44,6 +44,7 @@
         "  email: str\n",
         "\n",
         "  def __init__(self,ten,sdt,mail):\n",
+        "    #Khởi tạo các giá trị\n",
         "    super().__init__()\n",
         "    self.name=ten\n",
         "    self.phone=sdt\n",
@@ -79,9 +80,11 @@
         "  lst,lstname=[],[]\n",
         "  lst1,lst1avarage=[],[]\n",
         "  lst2,lst2salary=[],[]\n",
+        "  global lst_result,lst1_result,lst2_result\n",
         "  while i<3:\n",
         "    bach=Person(input(\"Mời nhập tên người \"+str(i+1)+\":\"),input(\"Mời nhập số điện thoại người \"+str(i+1)+\":\"),input(\"Mời nhập email người \"+str(i+1)+\":\"))\n",
-        "    lst.append(bach.outputPerson())\n",
+        "    person=Person()\n",
+        "    lst.append(bach)\n",
         "    lstname.append(bach.name)\n",
         "    lst                                           #Danh sách 10 cá nhân\n",
         "    i+=1\n",
@@ -90,100 +93,46 @@
         "\n",
         "  while j<3:\n",
         "    bach1=Student(input(\"Mời nhập tên sinh viên \"+str(j+1)+\":\"),input(\"Mời nhập số điện thoại sinh viên \"+str(j+1)+\":\"),input(\"Mời nhập email sinh viên \"+str(j+1)+\":\"),input(\"Mời nhập số sinh viên \"+str(j+1)+\":\"),input(\"Mời nhập điểm trung bình sinh viên \"+str(j+1)+\":\"))\n",
-        "    lst1.append(bach1.outputStudent())\n",
+        "    lst1.append(bach1)\n",
         "    lst1avarage.append(bach1.avaragemark)               #Danh sách 10 sinh viên\n",
         "    j+=1\n",
         "  print(\"Danh sách 10 sinh viên:\",lst1)\n",
         "  print(\"\\n\")\n",
         "\n",
         "  while k<3:\n",
-        "    bach3=Professor(input(\"Mời nhập tên giáo sư \"+str(k+1)+\":\"),input(\"Mời nhập số điện thoại giáo sư \"+str(k+1)+\":\"),input(\"Mời nhập email giáo sư \"+str(k+1)+\":\"),input(\"Mời nhập lương giáo sư(triệu đồng) \"+str(k+1)+\":\"))\n",
-        "    lst2.append(bach3.outputProfessor())\n",
-        "    salary1=int(bach3.salary)\n",
-        "    lst2salary.append(salary1)\n",
+        "    bach2=Professor(input(\"Mời nhập tên giáo sư \"+str(k+1)+\":\"),input(\"Mời nhập số điện thoại giáo sư \"+str(k+1)+\":\"),input(\"Mời nhập email giáo sư \"+str(k+1)+\":\"),input(\"Mời nhập lương giáo sư(triệu đồng) \"+str(k+1)+\":\"))\n",
+        "    lst2.append(bach2)\n",
+        "    salaryy=int(bach2.salary)\n",
+        "    lst2salary.append(salaryy)\n",
         "    k+=1                                          #Danh sách 10 giáo sư\n",
         "  print(\"Danh sách 10 giáo sư:\",lst2)\n",
         "\n",
-        "  lstname=sorted(lstname,reverse=True)\n",
-        "  lst1avarage=sorted(lst1avarage,reverse=True)\n",
-        "  lst2salary=sorted(lst2salary)\n",
-        "  lst_result=[]\n",
-        "  lst1_result=[]                              #Sắp xếp\n",
-        "  lst2_result=[]\n",
-        "  for x in range(len(lstname)):\n",
-        "    for y in lst:\n",
-        "      if lstname[x] in y:\n",
-        "        lst_result.append(y)\n",
-        "  print(\"\\nDanh sách 10 cá nhân sau khi được sắp xếp giảm dần theo tên là:\",lst_result)\n",
-        "\n",
-        "  for m in range(len(lst1avarage)):\n",
-        "    for n in lst1:\n",
-        "      if lst1avarage[m] in n:\n",
-        "        lst1_result.append(n)\n",
-        "  print(\"Danh sách 10 sinh viên sau khi sắp xếp giảm dần theo điểm trung bình là:\",lst1_result)\n",
-        "\n",
-        "  for c in range(len(lst2salary)):\n",
-        "    for d in lst2:\n",
-        "      if lst2salary[c] in d:\n",
-        "        lst2_result.append(d)\n",
-        "  print(\"Danh sách 10 giáo sư sau khi sắp xếp tăng dần theo lương là:\",lst2_result)\n",
+        "  for t in range(len(lst)):\n",
+        "    for q in range(i+1,len(lst)):\n",
+        "      if lst[i].name<lst[j].name:\n",
+        "        lst[i],lst[j]=lst[j],lst[i]\n",
+        "  print(\"Danh sách 10 cá nhân sau khi được sắp xếp là:\",lst.outputPerson())\n",
         "\n",
         "if __name__==\"__main__\":\n",
         "  main()\n",
-        "\n"
+        "\n",
+        "import pickle\n",
+        "objectt=lst_result\n",
+        "object2=lst1_result\n",
+        "object3=lst2_result\n",
+        "file_Person=open('filename_Person.obj', 'w')\n",
+        "file_Student=open()\n",
+        "pickle.dump (objectt, file_person)\n"
       ],
-      "execution_count": 28,
+      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Mời nhập tên người 1:duy\n",
             "Mời nhập số điện thoại người 1:1\n",
-            "Mời nhập email người 1:1\n",
-            "Mời nhập tên người 2:an\n",
-            "Mời nhập số điện thoại người 2:2\n",
-            "Mời nhập email người 2:2\n",
-            "Mời nhập tên người 3:bach\n",
-            "Mời nhập số điện thoại người 3:3\n",
-            "Mời nhập email người 3:3\n",
-            "Danh sách 10 cá nhân: ['Tên:duy.Số điện thoại:1.Email:1', 'Tên:an.Số điện thoại:2.Email:2', 'Tên:bach.Số điện thoại:3.Email:3']\n",
-            "\n",
-            "\n",
-            "Mời nhập tên sinh viên 1:a\n",
-            "Mời nhập số điện thoại sinh viên 1:a\n",
-            "Mời nhập email sinh viên 1:a\n",
-            "Mời nhập số sinh viên 1:a\n",
-            "Mời nhập điểm trung bình sinh viên 1:5.5\n",
-            "Mời nhập tên sinh viên 2:b\n",
-            "Mời nhập số điện thoại sinh viên 2:b\n",
-            "Mời nhập email sinh viên 2:b\n",
-            "Mời nhập số sinh viên 2:b\n",
-            "Mời nhập điểm trung bình sinh viên 2:6\n",
-            "Mời nhập tên sinh viên 3:c\n",
-            "Mời nhập số điện thoại sinh viên 3:c\n",
-            "Mời nhập email sinh viên 3:c\n",
-            "Mời nhập số sinh viên 3:c\n",
-            "Mời nhập điểm trung bình sinh viên 3:8\n",
-            "Danh sách 10 sinh viên: ['Tên:a.Số điện thoại:a.Email:a.Số sinh viên:a.Điểm trung bình:5.5', 'Tên:b.Số điện thoại:b.Email:b.Số sinh viên:b.Điểm trung bình:6', 'Tên:c.Số điện thoại:c.Email:c.Số sinh viên:c.Điểm trung bình:8']\n",
-            "\n",
-            "\n",
-            "Mời nhập tên giáo sư 1:q\n",
-            "Mời nhập số điện thoại giáo sư 1:q\n",
-            "Mời nhập email giáo sư 1:q\n",
-            "Mời nhập lương giáo sư(triệu đồng) 1:5\n",
-            "Mời nhập tên giáo sư 2:t\n",
-            "Mời nhập số điện thoại giáo sư 2:t\n",
-            "Mời nhập email giáo sư 2:t\n",
-            "Mời nhập lương giáo sư(triệu đồng) 2:2\n",
-            "Mời nhập tên giáo sư 3:u\n",
-            "Mời nhập số điện thoại giáo sư 3:u\n",
-            "Mời nhập email giáo sư 3:u\n",
-            "Mời nhập lương giáo sư(triệu đồng) 3:10\n",
-            "Danh sách 10 giáo sư: ['Tên:q.Số điện thoại:q.Email:q.Lương(triệu đồng):5', 'Tên:t.Số điện thoại:t.Email:t.Lương(triệu đồng):2', 'Tên:u.Số điện thoại:u.Email:u.Lương(triệu đồng):10']\n",
-            "\n",
-            "Danh sách 10 cá nhân sau khi được sắp xếp giảm dần theo tên là: ['Tên:duy.Số điện thoại:1.Email:1', 'Tên:bach.Số điện thoại:3.Email:3', 'Tên:an.Số điện thoại:2.Email:2']\n",
-            "Danh sách 10 sinh viên sau khi sắp xếp giảm dần theo điểm trung bình là: ['Tên:c.Số điện thoại:c.Email:c.Số sinh viên:c.Điểm trung bình:8', 'Tên:b.Số điện thoại:b.Email:b.Số sinh viên:b.Điểm trung bình:6', 'Tên:a.Số điện thoại:a.Email:a.Số sinh viên:a.Điểm trung bình:5.5']\n"
+            "Mời nhập email người 1:1\n"
           ]
         },
         {
@@ -193,9 +142,9 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-28-dc61c6541b92>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     90\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 92\u001b[0;31m   \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     93\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-28-dc61c6541b92>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     85\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlst2salary\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     86\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0md\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlst2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 87\u001b[0;31m       \u001b[0;32mif\u001b[0m \u001b[0mlst2salary\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32min\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     88\u001b[0m         \u001b[0mlst2_result\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Danh sách 10 giáo sư sau khi sắp xếp tăng dần theo lương là:\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlst2_result\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: 'in <string>' requires string as left operand, not int"
+            "\u001b[0;32m<ipython-input-8-a786196fee52>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     75\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     76\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 77\u001b[0;31m   \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     78\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-8-a786196fee52>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     44\u001b[0m   \u001b[0;32mwhile\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m     \u001b[0mbach\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mPerson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Mời nhập tên người \"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\":\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Mời nhập số điện thoại người \"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\":\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Mời nhập email người \"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\":\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m     \u001b[0mperson\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mPerson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m     \u001b[0mlst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbach\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[0mlstname\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbach\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: __init__() missing 3 required positional arguments: 'ten', 'sdt', and 'mail'"
           ]
         }
       ]
